tests/fixtures/LatestTests/ObjectTests/errors/assign_to_function_call.fg
/; EXPECT_ERROR: AssignmentToNonLValue
type Person = {
    name: str
    age: int
}

fun getPerson() -> Person {
    return {
        name: "John",
        age: 30
    }
}

getPerson().name = "Jane"

